modified some display features

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,9 +56,9 @@
             <div class="text-content">
               <h1>Hello,<br>
                 <span id="typed-strings">
-                  <span>I'm Andrei Neagoie</span>
-                  <span>Python Expert</span>
-                  <span>Working as an Instructor</span>
+                  <span>I'm Tamer Koksal</span>
+                  <span>Python & R Expert</span>
+                  <span>Working as a Data Scientist</span>
                 </span>
                 <span id="typed"></span>
               </h1>
